# leptos_todo

./: Cargo.toml  LICENSE.txt  index.html  main.css
.github/workflows/: gh-pages-deploy.yml
src/: main.rs
src/components/: todo_item.rs
src/pages/: app.rs
